# ai-cousneling-platform

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pyproject.toml  test.py
archive/specs/: phase-1-autonomous-counseling-operating-model-spec-v1.2.md  phase-1-autonomous-counseling-operating-model-spec.md  phase-3-autonomous-runtime-strategy-spec-v1.2.md  phase-3-autonomous-runtime-strategy-spec.md  phase-4-interpretation-extraction-layer-spec-v1.3.md  phase-4-interpretation-extraction-layer-spec.md  phase-5-student-memory-and-counseling-state-spec-v1.0.md  prototype-runtime-checkpoint.md
data/knowledge/: catalog.json
public/: app.js  index.html  styles.css
skills/ambiguous-proceed-clarification/: SKILL.md
skills/combined-option-validation/: SKILL.md
skills/comparison-shortlist-playbook/: SKILL.md
skills/confirmed-preference-to-handoff-playbook/: SKILL.md
specs/: phase-0-bounded-autonomy-baseline-spec.md  phase-1-autonomous-counseling-operating-model-spec-v1.3.md  phase-2-counseling-sop-skill-control-spec-v1.2.md  phase-2-counseling-sop-skill-control-spec-v1.3.md  phase-2-counseling-sop-skill-control-spec.md  phase-3-autonomous-runtime-strategy-spec-v1.3.md  phase-4-interpretation-extraction-layer-spec-v1.2.md  phase-4-interpretation-extraction-layer-spec-v1.3.md  phase-4-interpretation-extraction-layer-spec-v1.4.md  phase-5-student-memory-and-counseling-state-spec-v1.1.md  roadmap-v7.4.md  roadmap-v7.md  roadmap-v8.0.md  route-episode-redesign-decision-summary-v1.0.md
src/: server.js
test/: runtime.test.js
tests/: test_runtime.py
(+77 files in other folders)
