[project]
name = "bounded-autonomous-counseling-prototype"
version = "0.1.0"
description = "Typed Python prototype for a bounded autonomous counseling runtime."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pydantic-ai>=0.0.14",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/counseling_runtime"]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
